; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_si.c_SI_RegisterPollingHandler.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_si.c_SI_RegisterPollingHandler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@rdstHandlers = common dso_local global i32** null, align 8
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @SI_RegisterPollingHandler(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %6 = load i32, i32* %4, align 4
  %7 = call i32 @_CPU_ISR_Disable(i32 %6)
  store i32 0, i32* %5, align 4
  store i32 0, i32* %5, align 4
  br label %8

8:                                                ; preds = %23, %1
  %9 = load i32, i32* %5, align 4
  %10 = icmp slt i32 %9, 4
  br i1 %10, label %11, label %26

11:                                               ; preds = %8
  %12 = load i32**, i32*** @rdstHandlers, align 8
  %13 = load i32, i32* %5, align 4
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds i32*, i32** %12, i64 %14
  %16 = load i32*, i32** %15, align 8
  %17 = load i32*, i32** %3, align 8
  %18 = icmp eq i32* %16, %17
  br i1 %18, label %19, label %22

19:                                               ; preds = %11
  %20 = load i32, i32* %4, align 4
  %21 = call i32 @_CPU_ISR_Restore(i32 %20)
  store i32 1, i32* %2, align 4
  br label %54

22:                                               ; preds = %11
  br label %23

23:                                               ; preds = %22
  %24 = load i32, i32* %5, align 4
  %25 = add nsw i32 %24, 1
  store i32 %25, i32* %5, align 4
  br label %8

26:                                               ; preds = %8
  store i32 0, i32* %5, align 4
  br label %27

27:                                               ; preds = %48, %26
  %28 = load i32, i32* %5, align 4
  %29 = icmp slt i32 %28, 4
  br i1 %29, label %30, label %51

30:                                               ; preds = %27
  %31 = load i32**, i32*** @rdstHandlers, align 8
  %32 = load i32, i32* %5, align 4
  %33 = sext i32 %32 to i64
  %34 = getelementptr inbounds i32*, i32** %31, i64 %33
  %35 = load i32*, i32** %34, align 8
  %36 = icmp eq i32* %35, null
  br i1 %36, label %37, label %47

37:                                               ; preds = %30
  %38 = load i32*, i32** %3, align 8
  %39 = load i32**, i32*** @rdstHandlers, align 8
  %40 = load i32, i32* %5, align 4
  %41 = sext i32 %40 to i64
  %42 = getelementptr inbounds i32*, i32** %39, i64 %41
  store i32* %38, i32** %42, align 8
  %43 = load i32, i32* @TRUE, align 4
  %44 = call i32 @SI_EnablePollingInterrupt(i32 %43)
  %45 = load i32, i32* %4, align 4
  %46 = call i32 @_CPU_ISR_Restore(i32 %45)
  store i32 1, i32* %2, align 4
  br label %54

47:                                               ; preds = %30
  br label %48

48:                                               ; preds = %47
  %49 = load i32, i32* %5, align 4
  %50 = add nsw i32 %49, 1
  store i32 %50, i32* %5, align 4
  br label %27

51:                                               ; preds = %27
  %52 = load i32, i32* %4, align 4
  %53 = call i32 @_CPU_ISR_Restore(i32 %52)
  store i32 0, i32* %2, align 4
  br label %54

54:                                               ; preds = %51, %37, %19
  %55 = load i32, i32* %2, align 4
  ret i32 %55
}

declare dso_local i32 @_CPU_ISR_Disable(i32) #1

declare dso_local i32 @_CPU_ISR_Restore(i32) #1

declare dso_local i32 @SI_EnablePollingInterrupt(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
